--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
+  "name": "kayak-back",
+  "version": "1.0.0",
+  "description": "Descripción de tu proyecto",
+  "main": "src/index.js", 
+  "scripts": {
+    "start": "node src/index.js", 
+    "dev": "nodemon src/index.js" 
+  },
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "dotenv": "^16.4.6",
-    "express": "^4.21.1",
-    "mysql2": "^3.11.5"
+    "express": "^4.17.1",
+    "mysql2": "^2.3.3",
+    "dotenv": "^8.2.0",
+    "body-parser": "^1.19.0"
   }
 }
