--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@vercel/node": "^3.2.27",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.6",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "helmet": "^8.0.0",
     "mysql2": "^3.11.5",
     "sequelize": "^6.37.5"
   },
