--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ node_modules
 node_modules/*
 vercel.json
 googlea5d00916557c0914.html
+readme.md
+secure
+secure/
+secure/*
+googlea5d00916557c0914.html
+kayak-plus.json
+api/kayak-plus.json
